--- a/Rscripts/Constructing a data dictionary.Rmd
+++ b/Rscripts/Constructing a data dictionary.Rmd
@@ -81,7 +81,7 @@ print(linker)
 ## **Data dictionary**
 Now we are ready to build a data dictionary with `build_dict()` function from the *dataMeta*. The function requires the CollectedData and linker data frames and variable_description as inputs.
 ```{r dictionary}
-dictionary <- build_dict(my.data = CollectedData, linker = linker, option_description = NULL)
+dictionary <- build_dict(my.data = CollectedData, linker = linker, option_description = NULL, prompt_varopts = FALSE)
 glimpse(dictionary)
 ```
 
