second-check is done

--- a/ipynbScripts/Collecting data using interactive Jupyter widgets.ipynb
+++ b/ipynbScripts/Collecting data using interactive Jupyter widgets.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "**Author details:** Author: B209223. Contact details: s2272326@ed.ac.uk.\n",
-    "**Notebook and data info**: This Notebook uses interactive jupyter-widgets and to collect the stranded patient data from NHSRdatasets and save it to working ‘Data’ folder, and finally saving all the captured test data to 'RawData' folder.Copyright statement: This Notebook is the product of The University of Edinburgh.\n",
+    "**Notebook and data info:** This Notebook uses interactive jupyter-widgets to collect the stranded patient data from NHSRdatasets and save it to working ‘Data’ folder, and finally saving all the captured test data to 'RawData' folder.\n",
     "\n",
     "# Data #\n",
     "\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "fabulous-channels",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "11    723       Stranded   42                   1  2020-12-12"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "norman-ensemble",
    "metadata": {},
    "outputs": [
@@ -222,6 +222,7 @@
    "id": "extreme-excitement",
    "metadata": {},
    "source": [
+    "There are 3 data types in this dataset.\n",
     "Index, age and mental_health_care are integers.\n",
     "Stranded.label is a string.\n",
     "Admit_date is a date.\n",
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "id": "attached-sydney",
    "metadata": {},
    "outputs": [
@@ -283,7 +284,7 @@
        "0      0             NA    0                   0 2000-01-01    False"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "surface-cemetery",
    "metadata": {},
    "outputs": [],
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 46,
    "id": "involved-output",
    "metadata": {},
    "outputs": [
@@ -365,7 +366,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -378,10 +379,10 @@
       ],
       "text/plain": [
        "   index  stranded.label  age  mental_health_care  admit_date  consent\n",
-       "0      7             NaN    0                   0  2000-01-01    False"
+       "0      0             NaN    0                   0  2000-01-01    False"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 47,
    "id": "interior-modem",
    "metadata": {},
    "outputs": [
@@ -455,7 +456,7 @@
        "0      7   Not Stranded   26                   0  2021-01-02"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,16 +480,16 @@
    "source": [
     "# Index variable #\n",
     "\n",
-    "The first variable index serves to link the test data with the original dataset. \n",
+    "Previously the data has been splited into a training dataset and a testing dataset. The first variable index serves to link the testing data with the original dataset. \n",
     "\n",
     "## Indexing in Python ##\n",
     "\n",
-    "Python is zero-indexed, meaning it starts in zero. We will use indexing in python to access the position where the data should be entered.\n"
+    "We will use indexing in python to access the position where the data should be inputted with an iloc() function. Noted that Python is zero-indexed, meaning it starts at zero.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 48,
    "id": "measured-cooper",
    "metadata": {},
    "outputs": [
@@ -540,7 +541,7 @@
        "0      7             NA    0                   0 2000-01-01    False"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,12 +559,12 @@
    "source": [
     "## Widgets ##\n",
     "\n",
-    "Widgets are interative python elements that provides user-friendly interface to input data. Based on data types, different widgets are employed. Here we will use checkbox widget, selection widget, numeric widgets and DatePicker widgets."
+    "Widgets are interative python elements that provides user-friendly interface to input data. Based on data types, different widgets are employed. In this project we will use checkbox widget, selection widget, numeric widgets and DatePicker widgets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 49,
    "id": "worst-perry",
    "metadata": {},
    "outputs": [],
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 50,
    "id": "approximate-cable",
    "metadata": {},
    "outputs": [],
@@ -617,14 +618,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 51,
    "id": "persistent-combining",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b135c41acaa1406399947ff04e65ca51",
+       "model_id": "e38a8bbbe5d446d59f4c1c703976df2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 52,
    "id": "impressive-girlfriend",
    "metadata": {},
    "outputs": [
@@ -699,7 +700,7 @@
        "0      7             NA    0                   0 2000-01-01     True"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 53,
    "id": "classical-alignment",
    "metadata": {},
    "outputs": [
@@ -767,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 54,
    "id": "general-prince",
    "metadata": {},
    "outputs": [
@@ -781,7 +782,7 @@
        "Name: stranded.label, dtype: object"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,12 +798,12 @@
    "id": "major-browser",
    "metadata": {},
    "source": [
-    "As expected, there are only two response allowed so a selection widget is preferred. The two responses are:"
+    "As expected, there are only two unique response so a selection widget is preferred. The two responses are:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 55,
    "id": "therapeutic-perry",
    "metadata": {},
    "outputs": [
@@ -812,7 +813,7 @@
        "['Not Stranded', 'Stranded']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 56,
    "id": "serial-flight",
    "metadata": {},
    "outputs": [
@@ -882,7 +883,7 @@
        "0      7   Not Stranded   26                   0  2021-01-02"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,14 +903,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 68,
    "id": "adverse-glasgow",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c3ecf5e06734b5ea688cea9361ea267",
+       "model_id": "81046d5bf32b4482b9d54a26c416b74f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -934,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 69,
    "id": "collected-public",
    "metadata": {},
    "outputs": [
@@ -972,7 +973,7 @@
        "      <th>0</th>\n",
        "      <td>7</td>\n",
        "      <td>Not Stranded</td>\n",
-       "      <td>0</td>\n",
+       "      <td>26</td>\n",
        "      <td>0</td>\n",
        "      <td>2000-01-01</td>\n",
        "      <td>True</td>\n",
@@ -983,10 +984,10 @@
       ],
       "text/plain": [
        "   index stranded.label  age  mental_health_care admit_date  consent\n",
-       "0      7   Not Stranded    0                   0 2000-01-01     True"
+       "0      7   Not Stranded   26                   0 2000-01-01     True"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "id": "higher-float",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 59,
    "id": "expired-bowling",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1102,7 @@
        "0      7   Not Stranded   26                   0  2021-01-02"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,14 +1123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 70,
    "id": "disabled-donor",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47272f1ce31f45ffb781fe699ff0ef6b",
+       "model_id": "6bb06dc7f81c4e739192ad5984b598a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1151,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 71,
    "id": "surrounded-mystery",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1204,7 @@
        "0      7   Not Stranded   26                   0 2000-01-01     True"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "id": "personal-pendant",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 63,
    "id": "latter-easter",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1274,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 64,
    "id": "unusual-straight",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1310,7 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 65,
    "id": "micro-sheriff",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1380,7 @@
        "0      7   Not Stranded   26                   0  2021-01-02"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,14 +1391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 73,
    "id": "portable-deployment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20a1d8c9b6494447a60e34fbdbdbbb15",
+       "model_id": "73c4e0080de748afa8d1b7e97b03da19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1422,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 74,
    "id": "hollow-victory",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1475,7 @@
        "0      7   Not Stranded   26                   0 2000-01-01     True"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "id": "proof-island",
    "metadata": {},
    "outputs": [
@@ -1527,11 +1528,12 @@
    "id": "native-final",
    "metadata": {},
    "source": [
-    "The data type object is a string.\n",
+    "The data type object is a string as dates are stored as characters.\n",
+    "\n",
     "\n",
     "## DatePicker widget\n",
     "\n",
-    "A DatePicker widget is placed to select a date."
+    "A DatePicker widget is placed to handle date input."
    ]
   },
   {
@@ -1544,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 76,
    "id": "contemporary-peoples",
    "metadata": {},
    "outputs": [
@@ -1594,7 +1596,7 @@
        "0      7   Not Stranded   26                   0  2021-01-02"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,14 +1607,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 77,
    "id": "comprehensive-restaurant",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62460dcce69e4e9092ea8d68c03d5e8f",
+       "model_id": "865860b72dda42729338a6a6993009e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1634,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 78,
    "id": "original-float",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1688,7 @@
        "0      7   Not Stranded   26                   0  2021-01-02     True"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 79,
    "id": "quick-envelope",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1746,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1766,7 +1768,7 @@
       ],
       "text/plain": [
        "   index stranded.label  age  mental_health_care  admit_date  consent\n",
-       "0      7            NaN    0                   0  2000-01-01    False\n",
+       "0      0            NaN    0                   0  2000-01-01    False\n",
        "0      7   Not Stranded   26                   0  2021-01-02     True"
       ]
      },
@@ -1793,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 80,
    "id": "decimal-growing",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 81,
    "id": "instant-surface",
    "metadata": {},
    "outputs": [],
@@ -1884,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 82,
    "id": "fresh-pittsburgh",
    "metadata": {},
    "outputs": [],
